--- a/html/login.ejs
+++ b/html/login.ejs
@@ -1,12 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login</title>
+</head>
 <body>
     <main>
         <div>
             <form action="/login" method="post">
-                <div>
                 <p>
                     <label for="username">Enter your username</label>
-                    <input type="text" name="username">
-                </div>
+                    <input type="text" name="username" id="username">
                 </p>
 
                 <p>
@@ -16,8 +21,9 @@
 
                 <p>
                     <button type="submit">Login</button>
-                </div>
                 </p>
             </form>
         </div>
     </main>
+</body>
+</html>
